--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "com.android.tools.build:gradle:4.0.0-alpha05"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,11 +32,11 @@ ext {
     versionCode = 1
     versionName = '0.1.3'
 
-    minSdkVersion = 16
-    targetSdkVersion = 27
-    compileSdkVersion = 27
-    buildToolsVersion = '26.0.2'
+    minSdkVersion = 21
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
 
     supportVersion = '27.0.2'
-    playServicesVersion = '11.8.0'
+    playServicesVersion = '17.0.0'
 }
