--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,11 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: "kotlin-android"
+apply plugin: "kotlin-kapt"
+apply from: rootProject.file('gradle/generated-kotlin-sources.gradle') //only for Android projects
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
 
     defaultConfig {
-        applicationId "net.sharewire.googlemapsclustering.sample"
+        applicationId "cz.brezinajn.googlemapsclustering.sample"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode rootProject.versionCode
@@ -27,7 +30,8 @@ android {
 
 dependencies {
     implementation project(':library')
-    implementation "com.android.support:support-v4:$supportVersion"
-    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
 }
